<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

	<data>

		<variable name="model" type="com.example.dkalita.pocopay.viewmodel.SignUpViewModel" />

	</data>

	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="16dp">

			<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp">

				<android.support.design.widget.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/sign_up_email"
						android:inputType="textEmailAddress"
						android:singleLine="true"
						android:text="@={model.login}" />

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

				<android.support.design.widget.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/sign_up_password"
						android:inputType="textPassword"
						android:singleLine="true"
						android:text="@={model.password}" />

			</android.support.design.widget.TextInputLayout>

			<CheckBox
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:checked="@={model.termsAccepted}"
					android:text="@string/sign_up_terms" />

		</LinearLayout>

	</ScrollView>

</layout>
