<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

	<data>

		<variable name="model" type="com.example.dkalita.pocopay.viewmodel.SignUpViewModel" />

	</data>

	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="16dp">

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/sign_up_country" />

			<Spinner
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:entries="@{model.countries}"
					android:selectedItemPosition="@={model.countryIndex}" />

			<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp">

				<android.support.design.widget.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:singleLine="true"
						android:hint="@string/sign_up_city"
						android:text="@={model.city}" />

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

				<android.support.design.widget.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:singleLine="true"
						android:hint="@string/sign_up_zip_code"
						android:text="@={model.zipCode}" />

			</android.support.design.widget.TextInputLayout>

		</LinearLayout>

	</ScrollView>

</layout>
